# agama-stubs

./: README.md  pyproject.toml  run_tests.fish
src/agama-stubs/: __init__.pyi
tests/: test_actionfinder.pyi  test_density.pyi  test_galaxymodel.pyi  test_target.pyi
